tests/baselines/reference/optionalParamReferencingOtherParams2.errors.txt
optionalParamReferencingOtherParams2.ts(2,29): error TS2373: Parameter 'y' cannot reference identifier 'b' declared after it.


==== optionalParamReferencingOtherParams2.ts (1 errors) ====
    var a = 1;
    function strange(x = a, y = b) { 
                                ~
!!! error TS2373: Parameter 'y' cannot reference identifier 'b' declared after it.
        var b = "";
        return y;
    }